<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- UI items-->
    <string name="app_name">MDP</string>
    <string name="arena">Arena</string>
    <string name="position">Position</string>
    <string name="direction">Direction</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="challenge1">Find Fastest Route</string>
    <string name="challenge2">Speed Parking</string>
    <string name="robotStatus">Robot Status:</string>
    <string name="receivedText">Received Text:</string>

    <!--  BluetoothChat -->
    <string name="send"><font fgcolor = '#FFFFFF'>Send</font></string>
    <string name="not_connected">You are not connected to a device...</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning"><font bgcolor = '#FFFFFF'> Scanning for devices...</font></string>
    <string name="select_device"><font bgcolor = '#FFFFFF'> Select a device to connect</font></string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
</resources>