<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_background">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:id="@+id/appBar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:elevation="0dp"-->
    <!--        android:theme="@style/AppTheme.AppBarOverlay" >-->

    <!--        <androidx.appcompat.widget.Toolbar-->
    <!--            android:id="@+id/toolbar"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:background="@color/light_blue"-->
    <!--            android:layout_height="?attr/actionBarSize"-->
    <!--            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <LinearLayout
        android:id="@+id/ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtArena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arena"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center" />

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="0"-->
<!--            android:baselineAligned="false"-->
<!--            android:orientation="horizontal"-->
<!--            android:background="@drawable/gradient_background">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <com.example.mdp.MapGrid
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1.2:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginEnd="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintButtons"
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <RelativeLayout
                        android:id="@+id/buttons"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        app:layout_constraintBottom_toBottomOf="@id/constraintButtons"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="@id/constraintButtons"
                        app:layout_constraintStart_toStartOf="@id/constraintButtons"
                        app:layout_constraintTop_toTopOf="@id/constraintButtons">

                        <ImageButton
                            android:id="@+id/btnUp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="@null"
                            android:src="@drawable/ic_up_arrow" />

                        <ImageButton
                            android:id="@+id/btnLeft"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:src="@drawable/ic_left_arrow" />

                        <ImageButton
                            android:id="@+id/btnCenter"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:background="@null"
                            android:src="@drawable/ic_circle" />

                        <ImageButton
                            android:id="@+id/btnRight"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:src="@drawable/ic_right_arrow" />

                    </RelativeLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/challenge1"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/blue_button"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/challenge2"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:src="@drawable/blue_button"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/grey_box" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/position"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold"
                            android:textSize="11sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/xLayout"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/x"
                                    android:textStyle="bold"
                                    android:textColor="@color/dark_blue"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/txtX"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="-"
                                    android:textColor="@color/dark_blue"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/yLayout"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/y"
                                    android:textStyle="bold"
                                    android:textSize="12sp"
                                    android:textColor="@color/dark_blue"/>

                                <TextView
                                    android:id="@+id/txtY"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="-"
                                    android:textStyle="bold"
                                    android:layout_centerInParent="true"
                                    android:textSize="14sp"
                                    android:textColor="@color/dark_blue"/>

                            </RelativeLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/grey_box"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/direction"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold"
                            android:textSize="11sp"/>

                        <TextView
                            android:id="@+id/txtDirection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/dark_blue"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/switchTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tilt:"
                            android:textSize="11sp"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold"/>

                        <Switch
                            android:id="@+id/tiltSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/switchTitle"
                            android:textOff="OFF"
                            android:textOn="ON"/>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical"
                    android:background="@drawable/grey_box"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold"
                        android:text="@string/robotStatus"/>

                    <TextView
                        android:id="@+id/txtRobotStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/sample_content_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/grey_box"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp">

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>